--- a/stack-8.2.2.yaml
+++ b/stack-8.2.2.yaml
@@ -1,4 +1,4 @@
-resolver: lts-11.9
+resolver: lts-13.19
 
 local-bin-path: bin
 
@@ -9,7 +9,9 @@ nix:
 
 extra-deps:
   - ede-0.2.9
-  - text-regex-replace-0.1.1.1
+  - text-regex-replace-0.1.1.3
+  - hindent-5.3.1
+  - unexceptionalio-0.5.0
 
 packages:
   - gen
